# marketplace-api

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-testing.yml
api/: app.py  deps.py
api/handlers/: auth.py  cart.py  orders.py  products.py  sellers.py  sellers.py.html  users.py
api/schemas/: cart.py  orders.py  products.py  sellers.py  users.py
common/: settings.py
db/: base.py  db.py
migrations/: env.py
migrations/versions/: 2024-01-02_init.py
models/: cart.py  orders.py  products.py  users.py
repositories/: cart.py  orders.py  products.py  users.py
services/: auth.py  cart.py  orders.py  products.py  sales.py  users.py
tests/: conftest.py  test_cart.py  test_orders.py  test_products.py  test_users.py
utils/: models_annotations.py
